# extension-methods

./: README.md  pyproject.toml  scratch.py
.github/workflows/: build-test-publish.yml
src/extension_methods/: __init__.py  extensions.py
src/extensionmethods/: __init__.py  extensions.py
tests/: test_extensions.py
