[project]
name = "extension-methods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pim Mostert", email = "pim.mostert@pimmostert.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
extension-methods = "extension_methods:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
