[project]
name = "extension-methods"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pim Mostert", email = "pim.mostert@pimmostert.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools_scm]
tag_regex = 'v(\d+\.\d+\.\d+)$' # vX.Y.Z (major, minor, patch)
